--- a/CH03/CH03-03/index.html
+++ b/CH03/CH03-03/index.html
@@ -12,8 +12,9 @@
 <section class="contents">
 </section>
 <script>
-  alert(100 * 0.08);
-  alert(500 * 0.08);
+  var tax_rate = 0.08;
+  alert(100 * tax_rate);
+  alert(500 * tax_rate);
 </script>
 </body>
 </html>
