--- a/CH03/CH03-04/index.html
+++ b/CH03/CH03-04/index.html
@@ -12,13 +12,7 @@
 <section class="contents">
 </section>
 <script>
-  var tax_rate = 0.10;
-  if(tax_rate == 0.10) {
-    alert(100 * tax_rate);
-    alert(500 * tax_rate);
-  } else {
-    alert('税率を10%にしてください。');
-  }
+  confirm('この処理を許可しますか？');
 </script>
 </body>
 </html>
