confirm関数を組み込んだ

--- a/CH03/CH03-04/index.html
+++ b/CH03/CH03-04/index.html
@@ -12,7 +12,11 @@
 <section class="contents">
 </section>
 <script>
-  confirm('この処理を許可しますか？');
+  if(confirm('この処理を許可しますか？')){;
+    alert('OKが選択されました');
+  } else {
+    alert('キャンセルが選択されました');
+  }
 </script>
 </body>
 </html>
