--- a/CH03/CH03-06/index.html
+++ b/CH03/CH03-06/index.html
@@ -12,10 +12,11 @@
 <section class="contents">
 </section>
 <script>
-  var counter = 1;
-
-  while(counter < 4) {
-    alert(counter + "回目の処理");
+  var counter = 0;
+  var fruits = ['リンゴ','モモ','ミカン','イチゴ'];
+  var limit = fruits.length;
+  while(counter < limit) {
+    alert(fruits[counter]);
     counter++;
   }
 </script>
