国の首都を表示

--- a/CH03/CH03-08/index.html
+++ b/CH03/CH03-08/index.html
@@ -12,6 +12,15 @@
 <section class="contents">
 </section>
 <script>
+  var capital = '東京';
+
+if(capital == '東京') {
+    alert('日本の首都');
+} else if(capital == 'ワシントン') {
+    alert('アメリカの首都');
+} else if(capital == 'ロンドン') {
+    alert('イギリスの首都');
+}
 </script>
 </body>
 </html>
