--- a/CH03/CH03-08/index.html
+++ b/CH03/CH03-08/index.html
@@ -14,13 +14,17 @@
 <script>
   var capital = '東京';
 
-if(capital == '東京') {
-    alert('日本の首都');
-} else if(capital == 'ワシントン') {
-    alert('アメリカの首都');
-} else if(capital == 'ロンドン') {
-    alert('イギリスの首都');
-}
+  switch(capital) {
+    case '東京':
+      alert('日本の首都');
+    break;
+    case 'ワシントン':
+      alert('アメリカの首都');
+      break;
+    case 'ロンドン':
+      alert('イギリスの首都');
+      break;
+  }
 </script>
 </body>
 </html>
