--- a/CH03/CH03-10/index.html
+++ b/CH03/CH03-10/index.html
@@ -13,7 +13,9 @@
 </section>
 <script>
   var person = {name: 'Ken', age:14};
-  alert('My name is ' + person.name + '. I,m' + person.age + 'years old.');
+  person.name = 'Risa';
+  person.gender = 'woman';
+  alert(person.name + ' is ' + person.gender);
 </script>
 </body>
 </html>
